# jobbcoachkollen

./: .gitignore  AllaJobb.csv  README.md  ai_predictor.py  app.py  data_loader.py  layout.py  pyproject.toml  requirements.txt  train_model.py  trend_analysis.py
